<resources>
    <string name="app_name">PowerShare</string>
    <string name="inspire_me_activity">INSPIRE ME via FLICKR</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_alerts">Alerts</string>
    <string name="action_progress">Progress</string>
    <string name="action_search">Search</string>
    <string name="alert_approve_post">Do you want to approve this powershare draft?</string>
    <string name="alert_change_lead_status">You are about to change status of the lead, do you want to proceed?</string>
    <string name="alert_change_order_status">You are about to change status of the order, do you want to proceed?</string>
    <string name="alert_quit_app">Are you sure you want to quit without sharing your post?</string>
    <string name="alert_reject_post">Do you want to reject this powershare draft?</string>
    <string name="already_retweet_listen_action">You have already Retweet this post.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="atlas_screen_messages_title">New Message</string>
    <string name="atlas_screen_qr_prompt">Scan Layer Atlas QR Code</string>
    <string name="atlas_screen_settings_title">Settings</string>
    <string name="com.crashlytics.android.build_id">f46bbfa1-9923-4073-a112-6e3d9093759f</string>
    <string name="drawer_chat">Chat</string>
    <string name="drawer_close">CLOSE</string>
    <string name="drawer_delivery">Delivery</string>
    <string name="drawer_listen">Listen</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_notif">Notifications</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_pipeline">Pipeline</string>
    <string name="drawer_pipeline_v2">Pipeline V2</string>
    <string name="drawer_powershare">Powershare</string>
    <string name="drawer_settings">Settings</string>
    <string name="eror_assign_lead">The lead could not be assigned, please try again later</string>
    <string name="error_add_lead">Oops! Lead could not be added, please try again later.</string>
    <string name="error_assign_order">The order could not be assigned, please try again later</string>
    <string name="error_business_name">Please enter business name</string>
    <string name="error_change_status">The satus could not be changed, please try again later</string>
    <string name="error_channels_not_selected">Please select channels</string>
    <string name="error_email">Please enter valid Email Id</string>
    <string name="error_fetching_delivery_boys">Could not fetch the delivery boys, please try again later</string>
    <string name="error_generic">Oops, something went wrong, please try again later</string>
    <string name="error_image_upload_fail">Image upload failed, Please try again later</string>
    <string name="error_invalid_listen_response">Please provide a valid response</string>
    <string name="error_invalid_share_data">Please provide content to powershare</string>
    <string name="error_invalid_video_link">Please add a valid youtube video link</string>
    <string name="error_lead_email">Please provide a valid email ID</string>
    <string name="error_lead_name">Please provide customer name</string>
    <string name="error_lead_org">Please provide name of the organization</string>
    <string name="error_lead_phone">Please provide a valid phone number</string>
    <string name="error_lead_title">Please provide a title to the lead</string>
    <string name="error_listen_action">Oops! something went wrong, your response could not be sent.</string>
    <string name="error_login_token_expiry">Kindly re authenticate to proceed</string>
    <string name="error_message">Please enter a response</string>
    <string name="error_no_cancellation_reason">Please specify a reason for cancelling the order.</string>
    <string name="error_no_connectivity">Oops! something is wrong with your network.</string>
    <string name="error_no_delivery_boys">Please assign the order to a delivery boy.</string>
    <string name="error_no_delivery_boys_available">There are no delivery boys available</string>
    <string name="error_no_no_results">No results available</string>
    <string name="error_no_results">No results found!</string>
    <string name="error_operation_failed">The operation could not be performed, please try again later.</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="error_phone">Please enter valid phone number</string>
    <string name="error_reject_powershare_comment">Please enter a comment for revision</string>
    <string name="error_request_generic">The request could not be completed, please try again later</string>
    <string name="error_select_date">Please select a valid date to schedule</string>
    <string name="error_select_time">Please select a valid time to schedule</string>
    <string name="error_sending_response">oops could not send the response, Please try again later</string>
    <string name="error_text_length_invalid_image_text">The share text should not be more than 127 characters.</string>
    <string name="error_text_length_invalid_twitter_text">The share text should not be more than 140 characters.</string>
    <string name="favourite">Favourite</string>
    <string name="heading_assign_marketing_exec">SELECT MARKETING EXECUTIVE</string>
    <string name="heading_assign_sales_exec">SELECT DELIVERY BOY</string>
    <string name="heading_power_share_failed">Error!</string>
    <string name="heading_power_share_successful">POST SHARED!</string>
    <string name="heading_powershare_detail_channel">This post will be shared on</string>
    <string name="heading_powershare_detail_html">POST PREVIEW</string>
<string name="heading_reject_powershare">"You are rejecting
the poweshare draft"</string>
    <string name="heading_schedule_successful">POST SCHEDULED!</string>
    <string name="heading_scheduler">SCHEDULE IT FOR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_add_lead_address">Contact Address</string>
    <string name="hint_add_lead_email">Email ID</string>
    <string name="hint_add_lead_name">Consumer Name*</string>
    <string name="hint_add_lead_phone">Contact Number</string>
    <string name="hint_email_id">Email id</string>
    <string name="hint_membership_query_business_name">Enter business name</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_go">GO</string>
    <string name="label_not_member">Not a member?</string>
    <string name="label_send_membership_query">SEND MEMBERSHIP QUERY</string>
</resources>